# dart-sys

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .release.toml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE-2.0.md  LICENSE-GPL-3.0.md  LICENSE-MIT.md  LICENSE.md  Makefile.toml  NOTICE  README.md  README.new.md  build.rs  readme.md
.github/: cargo-release.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.action.yml  ci.yml  codegen.action.yml  codegen_test.yml  codegen_test.yml.txt  examples_tests.yml  release.yml  release_minor.yml  release_patch.action.yml  release_patch.yml  rust-test.yml  rust_tests.yml  sanity_tests.yml  stale.yml
codegen/: Cargo.toml  README.md  build.rs
codegen/src/: codegen.rs  log.rs  main.rs  partials.rs  paths.rs  symbols.rs  update.rs
codegen/src/codegen/: mod.rs
codegen/src/update_dart_sdk/: mod.rs
codegen/src/utils/: file_stubs.rs  mod.rs  path_helpers.rs
dart-sdk/: dartdoc_options.yaml  revision
dart-sys/: Cargo.toml  build.rs
dart-sys/bindgen/: dart_sdk_wrapper.h
dart-sys/dart-sdk/: revision  version
dart-sys/src/: lib.rs
dart-sys/src/bindings/: mod.rs
dart-sys/src/bindings_api_dl/: mod.rs
examples/: Cargo.toml  Makefile.toml  async.rs  sync.rs
examples/hello_world/: Cargo.toml  pubspec.yaml
examples/hello_world/src/: lib.rs
examples/hello_world/test/: hello_world_test.dart
examples/primitives/: Cargo.toml  pubspec.yaml
examples/primitives/src/: lib.rs
examples/primitives/test/: primitives_test.dart
examples/random_number/: Cargo.toml  pubspec.yaml
examples/random_number/src/: lib.rs
examples/random_number/test/: random_number_test.dart
examples/structs/: Cargo.toml  pubspec.yaml
examples/structs/src/: lib.rs
examples/structs/test/: structs_test.dart
ffi/: Cargo.toml  build.rs
ffi/build_utils/: mod.rs
ffi/src/: lib.rs
ffi/src/dart_api/: tests.rs
ffi/src/dart_api_dl/: mod.rs
ffi/update-lib/: Cargo.toml
ffi/update-lib/src/: main.rs
sdk-version/: Cargo.toml
sdk-version/src/: main.rs
src/: lib.rs  tests.rs
tests/: Cargo.toml
tests/hello_cargo/: Cargo.toml
tests/hello_git/: Cargo.toml
tests/hello_local/: Cargo.toml
update-dart-sdk/: Cargo.toml
update-dart-sdk/src/: main.rs
