[workspace]
members = ["ffi", "examples/**/*", "ffi/update-lib"]

[workspace.package]
version = "2.1.0+2.0.0"
edition = "2021"
license = "GPL-3.0-or-later AND MIT AND Apache-2.0"
description = "Bindings to the dart native extensions api"
repository = "https://github.com/dart-sys/dart-sys"
keywords = [
	"dart",
	"native",
	"extension",
	"extensions",
	"dart-sys",
	"ffi",
	"flutter",
	"no-std",
	"code-generation",
	"bindings",
]
categories = ["no-std", "development-tools::ffi", "external-ffi-bindings"]
authors = [
	"Patrik Buhring <patrikbuhring@gmail.com>",
	"Mark Gutenberger <gutenfries@gmail.com>",
]


[workspace.dependencies]
dart-sys = { path = "ffi" }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
