[workspace]
members = ["dart-sys", "examples/**/*"]

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "GPL-3.0-or-later AND MIT"
description = "Bindings to the dart native extensions api"
repository = "https://github.com/dart-sys/dart-sys"
keywords = [
  "dart",
  "native",
  "extension",
  "extensions",
  "dart-sys",
  "ffi",
  "flutter",
  "no-std",
  "code-generation",
  "bindings",
]
categories = ["development-tools::ffi", "external-ffi-bindings"]
authors = [
  "Patrik Buhring <patrikbuhring@gmail.com>",
  "Mark Gutenberger <gutenfries@gmail.com>",
]


[workspace.dependencies]
dart-sys = { path = "dart-sys" }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
