[workspace]
members = ["dart-sys"]
exclude = ["update-dart-sdk"]

[workspace.package]
version = "3.1.9"
edition = "2021"
license = "GPL-3.0-or-later AND MIT AND Apache-2.0"
description = "Bindings to the dart native extensions api"
repository = "https://github.com/dart-sys/dart-sys"
keywords = ["dart", "ffi", "flutter", "bindings", "dart-native"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
authors = [
	"Patrik Buhring <patrikbuhring@gmail.com>",
	"Mark Gutenberger <gutenfries@gmail.com>",
]

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
