[package]
name = "codegen"
description = "Code generation for the Dart FFI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
bindgen = "0.69.1"
chrono = "0.4.31"
cc = "1.0.83"
reqwest = { version = "^0.11.13", features = ["blocking"] }
zip = "0.6.6"
sha2 = "0.10.8"

[build-dependencies]
cc = "1.0.83"
