[package]
name = "dart-sys"
description = "Statically generated, Opt-in style bindings to the Dart SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[build-dependencies]
cc = "^1.0.67"
