[workspace]
members = ["primitives", "hello_world", "structs"]

[workspace.dependencies]
rand = "^0.8.5"
libc = "^0.2.139"
lazy_static = "^1.4.0"
dart-sys = { path = "../dart-sys" }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
