[package]
name = "dart-sys"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"
readme = "../README.md"

# TODO: move these to their respective examples crates
[dev-dependencies]
static_assertions = "1.1.0"
rand = "0.8.5"
libc = "0.2.139"
lazy_static = "1.4.0"

[dependencies]
cfg-if = "1.0"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"

[features]
# default = ["std"]
docs-only = []
dart_api_dl = []
# std = []


[package.metadata.docs.rs]
features = ["docs-only"]

# [[example]]
# name = "async"
# crate-type = ["cdylib"]

# [[example]]
# name = "sync"
# crate-type = ["cdylib"]
