[package]
name = "sdk-version"
description = "small tool to get the version of the SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "sdk-version"
path = "src/main.rs"
