[workspace]
members = ["hello_local", "hello_cargo", "hello_git"]

[workspace.dependencies]
rand = "^0.8.5"
libc = "^0.2.139"
lazy_static = "^1.4.0"
dart-sys-local = { path = "../dart-sys", package = "dart-sys" }
dart-sys-cargo = { version = "3.1.11", package = "dart-sys" }
dart-sys-git = { git = "https://github.com/dart-sys/dart-sys.git", package = "dart-sys" }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
