[package]
name = "update-dart-sdk"
version = "0.0.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "A tool to update the Dart SDK"
publish = false

[dependencies]
reqwest = { version = "^0.11.13", features = ["blocking"] }
zip = "^0.6.3"
sha2 = "^0.10.6"
chrono = "0.4.23"
