[package]
name = "update-dart-sdk"
version = "0.0.2"
edition = "2021"
description = "A tool to update the Dart SDK"
publish = false

[dependencies]
reqwest = { version = "^0.11.13", features = ["blocking"] }
zip = "^0.6.3"
sha2 = "^0.10.6"
chrono = "0.4.23"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
