[package]
name = "hello_cargo"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
libc = { workspace = true }
lazy_static = { workspace = true }
dart-sys-cargo = { workspace = true }
